--- a/nextstrain_helper/orf8ko_profiles/orf8ko_builds.yaml
+++ b/nextstrain_helper/orf8ko_profiles/orf8ko_builds.yaml
@@ -6,8 +6,13 @@ custom_rules:
 inputs:
   - name: gisaid
     metadata: "data/gisaid_deletions.tsv.gz"
+    #aligned: s3://nextstrain-ncov-private/aligned.fasta.xz
     aligned: "nextstrain-ncov-private/aligned.fasta.xz"
     skip_sanitize_metadata: true
+  #- name: root
+  #  metadata: "data/references_metadata.tsv"
+  #  aligned: "data/references_sequences.fasta"
+  #  skip_sanitize_metadata: true
 
 # Defines next align specs
 genes: ["ORF1a", "ORF1b", "S", "ORF3a", "E", "M", "ORF6", "ORF7a", "ORF7b", "ORF8", "N", "ORF9b"]
